--- a/experiencia.html
+++ b/experiencia.html
@@ -37,17 +37,18 @@
 		</p>
 		<h2>Experiencia</h2>
 		<p>
-			<audio controls autoplay>
-				<source src="audios/audio.mp3" type="audio/mp3">
-				Texto cuando tu browser no soporta audio
-			</audio>
-		</p>
-		<p>
 			<video controls autoplay>
-				<source src="videos/video.mp4" type="video/mp4">
+				<source src="videos/IMG_7187.MOV" type="video/mp4">
 				Tu navegador no soporta la reproduccion de video
 			</video>
 		</p>
+		<p>
+			<audio controls autoplay>
+				<source src="audios/Voice Memo Nextu.m4a" type="audio/mp3">
+				Texto cuando tu browser no soporta audio
+			</audio>
+		</p>
+		
 		<footer>
 			Edgar Montoya<br>
 			Direcci&oacute;n: Paseos de Santa M&oacute;nica 9041-5<br>
