--- a/experiencia.html
+++ b/experiencia.html
@@ -38,7 +38,7 @@
 		<h2>Experiencia</h2>
 		<p>
 			<video controls autoplay>
-				<source src="videos/IMG_7187.MOV" type="video/mp4">
+				<source src="videos/IMG_7187.mp4" type="video/mp4">
 				Tu navegador no soporta la reproduccion de video
 			</video>
 		</p>
